# Simmurator-Prompt

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
docs/: API_SCHEMA.md
server/: Cargo.toml  index.js
server/src/: main.rs
src/: App.css  App.jsx  index.css  main.jsx
src/components/: AccessLog.css  AccessLog.jsx  EndpointList.css  EndpointList.jsx  Header.css  Header.jsx  StatsPanel.css  StatsPanel.jsx
src/components/css/: EndpointList.css  Header.css  index.css
